--- a/client/full-stack-gr2/src/app/app.component.html
+++ b/client/full-stack-gr2/src/app/app.component.html
@@ -1,14 +1,14 @@
 
 
 
-<div class='header'>
+<!-- <div class='header'>
   <app-nav-bar></app-nav-bar>
-</div>
+</div> -->
 
 <div class='flex'>
-  <div class='side-bar'>
+  <!-- <div class='side-bar'>
     <app-side-bar></app-side-bar>
-  </div>
+  </div> -->
   <div class='main'>
     <router-outlet></router-outlet>
   </div>
