--- a/client/full-stack-gr2/src/app/contact/contact.component.html
+++ b/client/full-stack-gr2/src/app/contact/contact.component.html
@@ -1,6 +1,7 @@
 <p>contact works!</p>
 
 
+
 Ergon Syla
 
 <h1>{{artist}}</h1>
@@ -11,3 +12,27 @@ Ergon Syla
     <p *ngIf="studenti.mosha == 19">{{studenti.emri}} {{studenti.mbiemri}}</p>
 </div>
 <button (click)="click">Clcik me</button>
+<!-- <h1>{{artist}}</h1> -->
+
+<!-- <p>{{studentet[1].emri}}</p> -->
+
+<div *ngFor="let studenti of studentet">
+<p *ngIf="studenti.mosha>=19">
+    {{studenti.emri}} {{studenti.mbiemri}} eshte {{studenti.mosha}}  vjeçar
+</p>
+</div>
+
+<table>
+    <tr>
+      <th>Emri</th>
+      <th>Mbiemri</th>
+      <th>Mosha</th>
+    </tr>
+    <tr *ngFor="let studenti of studentet">
+      <td>{{studenti.emri}}</td>
+      <td>{{studenti.mbiemri}}</td>
+      <td *ngIf="studenti.mosha==19" style="color:red">{{studenti.mosha}}</td>
+      <td *ngIf="studenti.mosha!=19">{{studenti.mosha}}</td>
+    </tr>
+   
+  </table>
