--- a/client/full-stack-gr2/src/app/contact/contact.component.html
+++ b/client/full-stack-gr2/src/app/contact/contact.component.html
@@ -1,17 +1,5 @@
 <p>contact works!</p>
 
-
-
-Ergon Syla
-
-<h1>{{artist}}</h1>
-
-<p>{{studentet[0].emri}}</p>
-
-<div *ngFor="let studenti of studentet">
-    <p *ngIf="studenti.mosha == 19">{{studenti.emri}} {{studenti.mbiemri}}</p>
-</div>
-<button (click)="click">Clcik me</button>
 <!-- <h1>{{artist}}</h1> -->
 
 <!-- <p>{{studentet[1].emri}}</p> -->
@@ -34,5 +22,18 @@ Ergon Syla
       <td *ngIf="studenti.mosha==19" style="color:red">{{studenti.mosha}}</td>
       <td *ngIf="studenti.mosha!=19">{{studenti.mosha}}</td>
     </tr>
-   
+
+    <br>
+
+    <tr>
+      <th>Emri</th>
+      <th>Mbiemri</th>
+      <th>Mosha</th>
+    </tr>
+    <tr>
+      <td><input type="text" [(ngModel)]="firstName"></td>
+      <td><input type="text" [(ngModel)]="lastName"></td>
+      <td><input type="text" [(ngModel)]="age"></td>
+    </tr>
+    <button (click)="test()">Regjistrohu</button>
   </table>
