--- a/client/full-stack-gr2/src/app/app.component.html
+++ b/client/full-stack-gr2/src/app/app.component.html
@@ -9,7 +9,7 @@
   <!-- <div class='side-bar'>
     <app-side-bar></app-side-bar>
   </div> -->
-  <div class='main'>
+  <div class='main container'>
     <router-outlet></router-outlet>
   </div>
 </div>
