--- a/client/full-stack-gr2/src/app/movie/movie.component.html
+++ b/client/full-stack-gr2/src/app/movie/movie.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div *ngFor="let movie of movies.results; let i = index">
+    <div class="container dflex" *ngFor="let movie of movies.results; let i = index">
         <s>
         {{i+1}} {{movie.title}}
     </s>
